<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="394dp"
            android:layout_height="289dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/registro_nombre_inp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre_ingresado_str"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registro_pass_inp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_registro_str"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registro_confirmPass_inp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password_registro_str"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registro_correo_inp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_registro_str"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registro_phone_inp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_registro_str"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/registro_bbdd_btn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="registrarUsuario"
                android:text="@string/boton_registro_str" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="131dp"
            android:layout_height="36dp"
            android:text="@string/titulo_registro_str"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/registro_volverMainFrag_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Cambiar"
            android:text="@string/volver_str"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
